force-app/main/default/objects/Situacao_do_Termo__c/Situacao_do_Termo__c.object-meta.xml
<CustomObject>
    <label>Situação do Termo</label>
    <nameField>
        <displayFormat>ST-{000000000}</displayFormat>
        <label>Nome de Situação do Termo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Situações dos Termos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>