force-app/main/default/objects/Situacao_do_Termo__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>ID de relacionamento para uso do Pentaho</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>60</length>
    <type>Text</type>
</CustomField>