force-app/main/default/objects/Situacao_do_Termo__c/fields/Id_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Id_Cliente__c</fullName>
    <description>ID da conta no CRM</description>
    <label>Id Cliente</label>
    <length>20</length>
    <type>Text</type>
</CustomField>